--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,28 +11,18 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/app_list_recycle_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-
-                <!--          <TextView-->
-                <!--              android:id="@+id/tvUsageStats"-->
-                <!--              android:layout_width="match_parent"-->
-                <!--              android:layout_height="wrap_content"/>-->
-
-                <!--            <ImageView-->
-                <!--                android:id="@+id/image_icon"-->
-                <!--                android:layout_width="60dp"-->
-                <!--                android:layout_height="60dp"/>-->
 
             </LinearLayout>
 
